# idl2xml

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
resource/: test.idl
scripts/: batch_conversion.sh  convert_idl_to_xml.py
src/: dynamic_type_xml.cpp  dynamic_type_xml.hpp  test.cpp  utils.cpp  utils.hpp
src/cmd/: idl2xml.cpp
src/python/: pyidl2xml.cpp
